<resources>

    <string name="app_name">Shop Wise</string>
    <string name="my_address">My address</string>
    <string name="cart_empty">Your cart is empty</string>
    <string name="cart_empty_description">Shop now to get our offers!</string>
    <string name="cart_empty_button">Let shopping!</string>
    <string name="let_login_button">Let login!</string>
    <string name="change_email">Change your email</string>
    <string name="must_login">Must login</string>
    <string name="enter_new_name">Please enter your new name!</string>

    <string name="change_phone">Change your phone number</string>
    <string name="enter_phone_new">Enter a new phone number</string>
    <string name="enter_phone_number">Enter a phone number</string>

    <string name="enter_email_field">Please enter your email in the field!</string>
    <string name="enter_password_field">Please enter your email in the field!</string>
    <string name="password_than_6">Password should be greater than equal to 6 characters!</string>
    <string name="enter_name_field">Please enter your name in the field!</string>

    <string name="enter_phone_field">Please enter your phone number in the field!</string>
    <string name="invalid_phone">Invalid Vietnam phone number!</string>

    <string name="enter_old_password_field">Please enter a old password in the field!</string>
    <string name="old_password_than_6">Old password should be greater than equal to 6 characters!</string>
    <string name="enter_new_password_field">Please enter a old password in the field!</string>
    <string name="new_password_than_6">New password should be greater than equal to 6 characters!</string>
    <string name="new_and_old_different_password">New password must be different from the old password!</string>
    <string name="confirm_same_new_password">Confirm new password must be the same as the new password!</string>
    <string name="confirm_password_than_6">Confirm password should be greater than equal to 6 characters!</string>
    <string name="enter_confirm_password_field">Please enter a confirm new password in the field!</string>
    <string name="spending_statistics">Spending Statistics</string>

    <string name="password">Password</string>
    <string name="login">Sign In</string>
    <string name="let_login">Let login!</string>
    <string name="forgot">Forgot password?</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="firstName">First Name</string>
    <string name="fullname">Full Name</string>

    <string name="lastName">Last Name</string>
    <string name="emailAddress">Email Address</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">Sign Up</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="nav_category">Category</string>
    <string name="see_all">See all</string>
    <string name="new_products">New Products</string>
    <string name="promotion_products">Promotional Products</string>
    <string name="most_purchased">Most Purchased</string>
    <string name="all_products">All Products</string>
    <string name="dummy">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum corper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc,</string>
    <string name="see_more">See more</string>
    <string name="collapse">Thu gọn</string>
    <string name="add_cart">Add to cart</string>
    <string name="cart">Cart</string>
    <string name="not_login">You are not logged in</string>
    <string name="please_sign_in">Please sign in to view your cart, rating and orders!</string>
    <string name="total_pay">Total pay:</string>
    <string name="delete">Delete</string>
    <string name="divide_text">|</string>
    <string name="terms_checkout">Clicking \"Order\" means that you agree to abide by the Shopwise Terms</string>
    <string name="add_new_address">Add New Address</string>
    <string name="contact">Contact</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone number</string>

    <string name="phone">Phone number</string>
    <string name="specific_address">Street name, building, house number</string>
    <string name="setting">Setting</string>
    <string name="hint_province">Select province/city</string>
    <string name="hint_district">Select district</string>
    <string name="hint_ward">Select ward/commune</string>
    <string name="delete_address">Delete address</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="select_language">Select language:</string>
    <string name="filter_search">Search Filters</string>
    <string name="by_category">By Category</string>
    <string name="show_more">Show more</string>
    <string name="by_price">By Price Range</string>
    <string name="Min">Min</string>
    <string name="Max">Max</string>
    <string name="other">Other</string>
    <string name="ascending">Increase</string>
    <string name="decrease">Decrease</string>
    <string name="best_purchase">Best sell</string>
    <string name="newest">Newest</string>
    <string name="apply">Apply</string>
    <string name="enter_new_email">Enter new email</string>
    <string name="enter_email">Enter email</string>
    <string name="confirm_your_email">Confirm your email</string>
    <string name="verify_password_text">For account security, please verify your identity by entering your password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="change">Change</string>
    <string name="reset_password">Reset password</string>
    <string name="save">Save</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="week">Week</string>
    <string name="payment_method">Payment method</string>
    <string name="cod">Cash on Delivery</string>
    <string name="order">Order</string>
    <string name="order_success">Order success</string>
    <string name="order_view_more_text">Please select Order to view more information</string>
    <string name="purchase_order">Order</string>
    <string name="category">Category:</string>
    <string name="brand">Brand:</string>
    <string name="description_product">Description product</string>
    <string name="no_review">There are no reviews yet</string>
    <string name="product_review">Review product</string>
    <string name="edit">Edit</string>
    <string name="email">Email</string>
    <string name="change_password">Change password</string>
    <string name="review">Review</string>
    <string name="next">Next</string>
    <string name="don_t_have_on_account">Don\'t have on Account?</string>
    <string name="set_default">Set as default address</string>
    <string name="delivery_address">Delivery address</string>
    <string name="total_payment">Total payment</string>
    <string name="product">product</string>
    <string name="request_cancel">Request cancel</string>
    <string name="repurchase">Repurchase</string>
    <string name="processing">Processing</string>
    <string name="enter_code">Enter code</string>
    <string name="enter_code_from_email">Enter the 6-character code sent to the email:</string>
    <string name="get_new_code">Get a new code</string>
    <string name="verify">Verify</string>
    <string name="search_here">Search here ...</string>
    <string name="already_account">Already have on Account?</string>
    <string name="Identity_verification">To keep your account secure, we need to verify your identity</string>
    <string name="verify_by_email">Email Verification</string>
    <string name="let_shopping">Let\'s Shopping</string>
    <string name="select_address">Select address</string>
    <string name="filter">Filter</string>
    <string name="no_products_matched">No products matched</string>
    <string name="loading">Loading...</string>
    <string name="all">All</string>
    <string name="search_name_product">Search a name product ...</string>
    <string name="history_buy">View purchase history</string>
    <string name="wait_for_confirmation">Processing</string>
    <string name="waiting_for_grab">Waiting for grab</string>
    <string name="delivering">Delivering</string>
    <string name="my_review">My review</string>
    <string name="setting_account">Setting my account</string>
    <string name="report">Report repurchase</string>
    <string name="terms_shopwise">Terms Shopwise</string>
    <string name="logout">Logout</string>

    <string name="remove_product_from_cart">Are you sure you want to remove this product from cart?</string>


</resources>