<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.NewAddressActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:theme="@style/ToolbarColoredBackArrow"/>
    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact"
            android:padding="10dp"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textColor="@color/gray_color"/>
        <com.luv2code.shopme.Utils.CustomTextInputLayout
            android:id="@+id/layout_tv_name"
            app:hintEnabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:background="@color/white"/>
        </com.luv2code.shopme.Utils.CustomTextInputLayout>
        <com.luv2code.shopme.Utils.CustomTextInputLayout
            android:id="@+id/layout_tv_phone"
            app:hintEnabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">
            <EditText
                android:id="@+id/tv_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:padding="10dp"
                android:inputType="phone"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:background="@color/white"/>
        </com.luv2code.shopme.Utils.CustomTextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:padding="10dp"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textColor="@color/gray_color"/>
        <Spinner
            android:id="@+id/spn_province"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:textColor="@color/black"/>
        <Spinner
            android:id="@+id/spn_district"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:textColor="@color/black"/>
        <Spinner
            android:id="@+id/spn_ward"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:textColor="@color/black"/>
        <com.luv2code.shopme.Utils.CustomTextInputLayout
            android:id="@+id/layout_tv_specific"
            app:hintEnabled="false"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/tv_address_specific"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/specific_address"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:background="@color/white"/>
        </com.luv2code.shopme.Utils.CustomTextInputLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:padding="10dp"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textColor="@color/gray_color"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/set_default"
                android:textColor="@color/black" />

            <Switch
                android:id="@+id/switch_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </RelativeLayout>
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_delete"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_address"
        android:textAllCaps="false"
        android:background="@color/white"
        android:layout_marginTop="30dp"
        android:textColor="@color/red"
        android:textSize="15dp" />
    <RelativeLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:paddingHorizontal="10dp"
        android:layout_height="42dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:background="@drawable/bg_btn_save"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="bold" />
    </RelativeLayout>


</LinearLayout>