<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.CartBlankFragment">
    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:src="@drawable/empty_cart"
            android:layout_width="120dp"
            android:layout_height="120dp"/>

        <TextView
            android:id="@+id/tv_title_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/not_login"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_description_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/please_sign_in"
            android:textColor="@color/gray_color"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_get_started_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/let_login"
            android:background="@drawable/bg_btn_border_white"
            android:textColor="@color/red"
            android:textAllCaps="false"
            android:paddingHorizontal="30dp"
            android:textSize="15sp" />
    </LinearLayout>



</RelativeLayout>