<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Activity.LoginActivity">

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:padding="38dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:baselineAligned="false"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/login"
            android:textColor="@color/colorPrimary"
            android:textSize="35sp"
            android:textStyle="bold" />

        <com.luv2code.shopme.Utils.CustomTextInputLayout
            android:id="@+id/layout_tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:background="@drawable/bg_btn_trans_border_black"
                android:hint="@string/emailAddress"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="16dp" />
        </com.luv2code.shopme.Utils.CustomTextInputLayout>

        <com.luv2code.shopme.Utils.CustomTextInputLayout
            android:id="@+id/layout_tv_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:background="@drawable/bg_btn_trans_border_black"
                android:drawablePadding="10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="16dp" />
        </com.luv2code.shopme.Utils.CustomTextInputLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="20dp"
            android:paddingBottom="15dp">

            <TextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:padding="5dp"
                android:text="@string/forgot"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:background="@drawable/bg_btn_red"
            android:padding="3dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_on_account"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="15sp" />
            <TextView
                android:id="@+id/tv_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/signUp"
                android:textColor="@color/red"
                android:textStyle="bold"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>