<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_bottom_sheet"
    android:padding="20dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/btn_close_bottom_sheet"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_baseline_close_24" />
    </RelativeLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:paddingHorizontal="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fullname"
            android:textColor="@color/black"/>
        <EditText
            android:layout_marginTop="10dp"
            android:id="@+id/bottom_sheet_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Pham Dung Bac"
            android:padding="10dp"
            android:background="@drawable/bg_light_gray"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bottom_sheet_btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn_red"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="17dp" />
    </RelativeLayout>
</LinearLayout>